<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    android:orientation="vertical"
    android:padding="10dp">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <Space
                android:layout_width="match_parent"
                android:layout_height="20dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/new_entry_car_makeModel"
                android:textColor="@color/colorText"
                android:textSize="20dp" />

            <EditText
                android:textColor="@color/colorText"
                android:id="@+id/new_entry_car_makeModel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text" />


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/new_entry_year"
                android:textColor="@color/colorText"
                android:textSize="20dp" />

            <EditText
                android:textColor="@color/colorText"
                android:id="@+id/new_entry_year"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/new_entry_maintenance_type"
                android:textColor="@color/colorText"
                android:textSize="20dp" />

            <CheckBox
                android:textColor="@color/colorText"
                android:id="@+id/checkPeriodic"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/new_entry_maintenance_type_periodic" />

            <CheckBox
                android:textColor="@color/colorText"
                android:id="@+id/checkEngine"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/new_entry_maintenance_type_engine" />

            <CheckBox
                android:textColor="@color/colorText"
                android:id="@+id/checkChassis"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/new_entry_maintenance_type_chassis" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="20dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/new_entry_maintenance_city_type"
                android:textColor="@color/colorText"
                android:textSize="20dp" />

            <RadioGroup
                android:id="@+id/new_entry_city_group"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="2">

                <RadioButton
                    android:textColor="@color/colorText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/new_entry_maintenance_city_Vilnius" />

                <RadioButton
                    android:textColor="@color/colorText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/new_entry_maintenance_city_Kaunas" />

            </RadioGroup>

            <Space
                android:layout_width="match_parent"
                android:layout_height="20dp"/>


            <Space
                android:layout_width="match_parent"
                android:layout_height="20dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/new_entry_dinner_payment_type"
                android:textColor="@color/colorText"
                android:textSize="20dp" />

            <Spinner
                android:id="@+id/payment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:entries="@array/new_entry_dinner_payment_type" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="20dp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="3">

                <Button
                    android:id="@+id/btn_create"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@color/colorPrimary"
                    android:text="@string/new_entry_insert" />

                <Button
                    android:id="@+id/btn_update"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@color/colorGrey"
                    android:text="@string/new_entry_update" />

                <Button

                    android:id="@+id/btn_delete"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@color/colorAccent"
                    android:text="@string/new_entry_delete" />

            </LinearLayout>

        </LinearLayout>
    </ScrollView>
</LinearLayout>
